--- a/game-app/package.json
+++ b/game-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "material-icons-react": "^1.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -15,7 +16,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "jest": "^23.4.1"
   }
 }
