--- a/game-app/package.json
+++ b/game-app/package.json
@@ -21,6 +21,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-jest": "^23.4.0",
+    "babel-preset-env": "^1.7.0",
     "jest": "^23.4.1"
   }
 }
